2003-08-06  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.[ch]: removed 'create_component_with_defaults'
	virtual method.
	(e_cal_component_create_component_with_defaults):
	(e_cal_component_get_color_for_component): new functions.

2003-08-06  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.[ch] (e_cal_model_set_query): new function.
	(e_cal_model_remove_all_clients): implemented.
	(remove_client): also remove all objects belonging to the
	client being removed.

2003-08-06  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (get_dtstart, set_dtstart): implemented.
	(ecm_value_at, ecm_set_value_at, ecm_duplicate_value,
	 ecm_free_value, ecm_value_to_string): added case for DTSTART
	 field.
	(free_comp_data): free also the other date values in the
	ECalModelComponent struct.
	(e_cal_model_date_value_to_string): new function.

	* gui/e-cal-model.h: added new prototypes.

	* gui/e-cal-model-calendar.[ch]: new ECalModel-based class for
	containing events.

	* gui/e-cal-model-tasks.c (ecmt_value_to_string): implemented
	the case for date fields.

2003-08-05  Rodrigo Moya <rodrigo@ximian.com>

	* cal-client/cal-client.c (generate_instances_obj_updated_cb): fixed
	parameters in call to cal_client_get_object().
	(get_objects_atomatically): same.

	* gui/e-cal-model.[ch]: added "get_color_for_component" virtual method.
	(get_color): new function to return the color. It calls the virtual
	method of the current class.
	(ecm_value_at): return a value for the color and icon columns.
	(e_cal_model_class_init): initialize virtual methods.

	* gui/e-cal-model-tasks.c (ecmt_get_color_for_component): implemented
	new class' virtual method.

2003-08-05  Rodrigo Moya <rodrigo@ximian.com>

	* cal-client_/cal-client.c (cal_client_get_default_object): use
	correctly the pointer to pointer.

	* gui/e-week-view.c (query_obj_updated_cb): fixed the call to
	cal_client_get_object().

2003-08-04  Rodrigo Moya <rodrigo@ximian.com>
