@@ -1,3 +1,8 @@
+2003-08-07  Rodrigo Moya <rodrigo@ximian.com>
+
+	* gui/e-cal-model.c (ecm_get_color_for_component): use the color
+	palette from Tuomas.
+
 2003-08-06  Rodrigo Moya <rodrigo@ximian.com>
 
 	* gui/e-cal-model.[ch]: removed 'create_component_with_defaults'
